--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,6 +1,8 @@
 plugins {
     id 'com.android.application'
     id 'kotlin-android'
+    id 'kotlin-kapt'
+    id 'dagger.hilt.android.plugin'
 }
 
 android {
@@ -46,13 +48,25 @@ dependencies {
     implementation 'androidx.core:core-ktx:1.6.0'
     implementation 'androidx.appcompat:appcompat:1.3.1'
     implementation 'com.google.android.material:material:1.4.0'
+    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.5.1'
+
     implementation "androidx.compose.ui:ui:$compose_version"
     implementation "androidx.compose.material:material:$compose_version"
     implementation 'androidx.lifecycle:lifecycle-viewmodel-compose:1.0.0-alpha07'
     implementation 'androidx.activity:activity-compose:1.3.1'
-    implementation 'com.squareup.retrofit2:retrofit:2.9.0'
-    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.5.1'
+
     implementation 'io.coil-kt:coil-compose:1.3.2'
-    implementation 'com.google.code.gson:gson:2.8.7'
-    implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
+
+    implementation 'com.squareup.retrofit2:retrofit:2.9.0'
+
+    implementation 'androidx.room:room-ktx:2.3.0'
+    implementation 'androidx.room:room-runtime:2.3.0'
+
+    implementation 'com.google.dagger:hilt-android:2.38.1'
+
+    implementation 'com.airbnb.android:lottie-compose:4.1.0'
+
+    kapt 'org.xerial:sqlite-jdbc:3.36.0.1'
+    kapt 'androidx.room:room-compiler:2.3.0'
+    kapt 'com.google.dagger:hilt-android-compiler:2.38.1'
 }
