--- a/app/build.gradle
+++ b/app/build.gradle
@@ -54,7 +54,9 @@ dependencies {
     implementation "androidx.compose.material:material:$compose_version"
     implementation 'androidx.lifecycle:lifecycle-viewmodel-compose:1.0.0-alpha07'
     implementation 'androidx.activity:activity-compose:1.3.1'
+    implementation 'com.google.accompanist:accompanist-flowlayout:0.17.0'
 
+    implementation 'com.github.skydoves:landscapist-coil:1.3.3'
     implementation 'io.coil-kt:coil-compose:1.3.2'
 
     implementation 'com.squareup.retrofit2:retrofit:2.9.0'
