--- a/app/build.gradle
+++ b/app/build.gradle
@@ -59,14 +59,11 @@ dependencies {
 
     implementation 'com.squareup.retrofit2:retrofit:2.9.0'
 
-    implementation 'androidx.room:room-ktx:2.3.0'
-    implementation 'androidx.room:room-runtime:2.3.0'
-
     implementation 'com.google.dagger:hilt-android:2.38.1'
 
     implementation 'com.airbnb.android:lottie-compose:4.1.0'
 
-    kapt 'org.xerial:sqlite-jdbc:3.36.0.1'
-    kapt 'androidx.room:room-compiler:2.3.0'
+    implementation "androidx.paging:paging-compose:1.0.0-alpha12"
+
     kapt 'com.google.dagger:hilt-android-compiler:2.38.1'
 }
